--- a/propose.html
+++ b/propose.html
@@ -339,7 +339,7 @@
         </svg>
         
         <!-- Final Message -->
-        <div class="final-message" id="finalMessage">I Love You</div>
+        <div class="final-message" id="finalMessage">I Love You Mahmuda </div>
         
         <!-- Start Prompt -->
         <div id="startPrompt">Click anywhere to begin the story</div>
